Attempt to fix Yuta href on mobile

--- a/public/styles/layout/_navigation.scss
+++ b/public/styles/layout/_navigation.scss
@@ -49,7 +49,6 @@
   }
 
   #yuta {
-    margin-top: 30%;
     height: 200px;
     width: auto;
   }
