--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -154,7 +154,6 @@
     float: none; }
 
   #yuta {
-    margin-top: 30%;
     height: 200px;
     width: auto; } }
 .grid-container-down {
